--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.68.0",
+    "sonner": "^1.0.3",
     "three": "^0.157.0"
   },
   "devDependencies": {
